update new code

--- a/index.html
+++ b/index.html
@@ -12,48 +12,52 @@
         <div class="profile-navbar">
           <span class="profile-logo">🧑‍💻 Chau dev</span>
           <nav>
-            <a href="#stories">Stories</a>
+            <!-- <a href="#stories">Stories</a>
             <a href="#posts">Posts</a>
-            <a href="#source">Source</a>
+            <a href="#source">Source</a> -->
           </nav>
           <div class="profile-actions">
             <button class="btn mode-toggle">🌙</button>
-            <button class="btn menu-toggle">☰</button>
+            <!-- <button class="btn menu-toggle">☰</button> -->
           </div>
         </div>
         <div class="profile-hero">
           <div class="profile-3dcard">
             <div id="app" class="canvas-3d"></div>
-            <div class="profile-hello">Hello, I am a web developer</div>
           </div>
         </div>
       </header>
       <main class="profile-main">
         <section class="profile-info">
-          <div class="profile-avatar">
-            <img src="https://i.imgur.com/0y0y0y0.png" alt="avatar" />
+          <div class="profile-avatar animate-avatar">
+            <img src="/src/assets/avatar.png" alt="avatar" />
           </div>
           <div class="profile-details">
-            <h1>Bui Van Chau (ColabBui)</h1>
-            <div class="profile-role">Digital Craftsman ( Developer )</div>
-            <h2>Work</h2>
+            <div>👋 Xin chào, mình là <b>Châu</b>!</div>
+            <h1 class="animate-name">Bùi Văn Châu (ColabBui)</h1>
+            <div class="profile-role">
+              💻 Lập trình viên & Người sáng tạo số
+            </div>
+            <h2>Giới thiệu</h2>
             <p>
-              I am a student majoring in Artificial Intelligence at Dong A
-              University , Da Nang 🏫🧑‍💻.<br />
-              I am passionate about website programming and have a solid
-              foundation in HTML, CSS, Typescript, Javascript
+              Mình là sinh viên ngành Trí tuệ Nhân tạo tại Đại học Đông Á, Đà
+              Nẵng.<br />
+              Đam mê công nghệ, thích kể chuyện bằng code, yêu thích sáng tạo và
+              luôn tìm kiếm những ý tưởng mới lạ.<br />
+              Thành thạo: <b>HTML, CSS, Javascript, Typescript</b>.<br />
+              Sở trường: Web hiện đại, UI/UX, hiệu ứng động, học máy.
             </p>
-            <h2>Bio</h2>
+            <h2>Hành trình</h2>
             <p>
-              <b>2024</b> Develop backend hasura at Naikyo company, Da Nang<br />
-              <b>2021</b> Study at Dong A university, Da Nang
+              <b>2024</b> - Backend Hasura tại Naikyo, Đà Nẵng 🚀<br />
+              <b>2021</b> - Bắt đầu học tại Đại học Đông Á, Đà Nẵng
             </p>
-            <h2>I ♥</h2>
+            <h2>Đam mê</h2>
             <p>
-              Art, Music, Drawing, Playing Drums, Photography, Leica, Machine
-              Learning
+              🎨 Nghệ thuật, 🎵 Âm nhạc, 🥁 Chơi trống, 📷 Nhiếp ảnh, Leica, 🤖
+              Machine Learning
             </p>
-            <h2>On the web</h2>
+            <h2>Kết nối</h2>
             <p>
               <a href="https://github.com/chaudz" target="_blank">@chaudz</a>
             </p>
